updated logo file

--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -1,6 +1,6 @@
 <div class="login-box">
   <div class="login-logo">
-    <a><b>Admin</b>BMC</a>
+    <img src="dist/img/orissa-emunicipality.png" class="user-image" alt="User Image" style="width:100%">
   </div>
   <form class="">
       <div class="login-box-body">
@@ -21,7 +21,7 @@
               </label>
             </div>
             <div class="col-xs-12">
-              <button ng-click="submit()" class="btn btn-primary btn-block btn-flat">
+              <button ng-click="login()" class="btn btn-primary btn-block btn-flat">
                 Sign In
               </button>
               <section  align="center m-t-sm">
@@ -31,10 +31,6 @@
           </div>
         </form>
         <a href="">I forgot my password</a><br>
-        <!-- <a ui-sref="register" class="text-center">Register a new membership</a> -->
-
       </div>
-
   </form>
-  <!-- /.login-box-body -->
 </div>
