--- a/admin/index.html
+++ b/admin/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Admin-BMC</title>
+  <title>Odisha-eMunicipality</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <link rel="Shortcut Icon" href="dist/img/fevicon.ico">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/css/AdminRDA.css">
+  <link rel="stylesheet" href="dist/css/style.css">
   <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
   <link rel="stylesheet" href="plugins/iCheck/flat/blue.css">
   <link rel="stylesheet" href="plugins/datepicker/datepicker3.css">
