--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -16,20 +16,14 @@
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
       </li>
-      <li class="treeview">
-        <a href="" ui-sref="userProfile">
-          <i class="fa fa-cogs"></i>
-          <span>My Profile</span>
-        </a>
-      </li>
-      <li ng-if="user_type == '1'">
-        <a ui-sref="users">
+      <li>
+        <a href="">
           <i class="fa fa-th"></i> <span>User Management</span>
         </a>
       </li>
       <li class="treeview">
         <a href="">
-          <i class="fa fa-bell-o"></i>
+          <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           <span>Employee</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
@@ -39,9 +33,9 @@
         </ul>
       </li>
       <li class="treeview">
-        <a href="" ui-sref="buildingPlan">
-          <i class="fa fa-building-o"></i>
-          <span>Building Plan</span>
+        <a href="">
+          <i class="fa fa-cubes" aria-hidden="true"></i>
+          <span>Pension Scheme</span>
         </a>
       </li>
     </ul>
