--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,7 @@
   <script src="main_app.js"></script>
   <script src="directive/directive.js"></script>
   <script src="controller/main_controller.js"></script>
-  <!-- <script src="services/bmcservice.js"></script> -->
+  <script src="services/bmcservice.js"></script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini" ng-class="{'login-page':!loggedin}" ng-controller="Main_Controller" ng-init="getUserDetails()">
