--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -21,7 +21,7 @@
               </label>
             </div>
             <div class="col-xs-12">
-              <button ng-click="login()" class="btn btn-primary btn-block btn-flat">
+              <button ng-click="login(user)" class="btn btn-primary btn-block btn-flat">
                 Sign In
               </button>
               <section  align="center m-t-sm">
