added two web services

--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -16,12 +16,12 @@
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
       </li>
-      <li>
+      <li ng-if="logedIn_user.roll_id == '0'">
         <a href="">
           <i class="fa fa-th"></i> <span>User Management</span>
         </a>
       </li>
-      <li class="treeview">
+      <li class="treeview" ng-if="logedIn_user.roll_id == '3'">
         <a href="">
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           <span>Employee</span>
