--- a/admin/pages/header.html
+++ b/admin/pages/header.html
@@ -23,7 +23,7 @@
             </li>
             <li class="user-footer">
               <div class="pull-left">
-                <a href="" class="btn btn-default btn-flat">Profile</a>
+                <a href="" class="btn btn-default btn-flat">Change Password</a>
               </div>
               <div class="pull-right">
                 <a href="" class="btn btn-default btn-flat" ng-click="signOut()">Sign out</a>
