--- a/admin/pages/newemployee.html
+++ b/admin/pages/newemployee.html
@@ -138,7 +138,7 @@
         <!-- /.box-body -->
         <div class="box-footer">
           <button type="submit" class="btn btn-default" ui-sref="users">Cancel</button>
-          <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitdetails(employ)">Submit</button>
+          <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitdetails()">Submit</button>
         </div>
         <!-- /.box-footer -->
       </form>
