updated some web services and employee list

--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -29,7 +29,7 @@
         </a>
         <ul class="treeview-menu">
           <li><a ui-sref="newemployee"><i class="fa fa-circle-o"></i>New Employee</a></li>
-          <li><a ui-sref="employeedetails"><i class="fa fa-circle-o"></i>Employee Details</a></li>
+          <li><a ui-sref="employeeList"><i class="fa fa-circle-o"></i>Employee List</a></li>
         </ul>
       </li>
       <li class="treeview">
