--- a/admin/pages/newemployee.html
+++ b/admin/pages/newemployee.html
@@ -145,7 +145,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          <button type="submit" class="btn btn-default" ui-sref="users">Cancel</button>
+          <button type="submit" class="btn btn-default" ui-sref="dashboard">Cancel</button>
           <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitdetails()">Submit</button>
           <section  align="center m-t-sm">
               <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
