--- a/admin/pages/employee_list.html
+++ b/admin/pages/employee_list.html
@@ -12,7 +12,7 @@
         <div class="box-header">
           <h3 class="box-title">Employee List</h3>
         </div>
-        <div class="box-body">
+        <div class="box-body over-x-sc">
           <table id="example2" class="table table-bordered table-hover">
             <thead>
               <tr>
