--- a/admin/pages/editemployee.html
+++ b/admin/pages/editemployee.html
@@ -23,9 +23,9 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_designation.$invalid && addemployee.emp_designation.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label">Designation</label>
             <div class="col-sm-8">
-              <select class="form-control"  ng-model="employee.designation" name="emp_designation" ng-init="desingnation()"  required>
+              <select class="form-control"  ng-model="employee.designation_id" name="emp_designation" ng-init="desingnation()"  required>
                 <option value="">Select Designation</option>
-                <option value="{{employee.id}}" ng-repeat="employee in employeelist">{{employee.designation}}</option>
+                <option value="{{item.id}}" ng-selected="employee.designation_id == item.id" ng-repeat="item in designationList">{{item.designation}}</option>
               </select>
               <span class="help-block" ng-show="addemployee.emp_designation.$error.required && addemployee.emp_designation.$touched">Please add your desingnation</span>
             </div>
@@ -65,9 +65,9 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_district.$invalid && addemployee.emp_district.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label"> District</label>
             <div class="col-sm-8">
-              <select class="form-control" ng-model="employee.district" name="emp_district" ng-init="loaddistrict()" ng-change="getdistrictulb(employee.emp_district)" required>
+              <select class="form-control" ng-model="employee.district_id" name="emp_district" ng-init="loaddistrict()" ng-change="getdistrictulb(employee.emp_district)" required>
                 <option value="">Select District</option>
-                <option value="{{district.id}}" ng-repeat="district in district" >{{district.name}}</option>
+                <option value="{{district.id}}" ng-selected="employee.district_id == district.id" ng-repeat="district in district" >{{district.name}}</option>
               </select>
               <span class="help-block" ng-show="addemployee.emp_district.$error.required && addemployee.emp_district.$touched">Please enter a district</span>
             </div>
@@ -98,9 +98,9 @@
           <div class="form-group" ng-class="{'has-error': (addemployee.emp_uib.$invalid && addemployee.emp_uib.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label">Employee ULB</label>
             <div class="col-sm-8">
-              <select class="form-control" ng-model="employee.ulb"  name="emp_uib" required>
+              <select class="form-control" ng-model="employee.ulb_id"  name="emp_uib" required>
                 <option value="">Select ULB</option>
-                <option value="{{ulb.id}}" ng-repeat="ulb in ulblist">{{ulb.name}}</option>
+                <option value="{{ulb.id}}" ng-selected="employee.ulb_id == ulb.id" ng-repeat="ulb in ulblist">{{ulb.name}}</option>
               </select>
               <span class="help-block" ng-show="addemployee.emp_uib.$error.required && addemployee.emp_uib.$touched">Please enter employee UIB no</span>
             </div>
