--- a/admin/pages/employee_list.html
+++ b/admin/pages/employee_list.html
@@ -55,7 +55,7 @@
                 <td>{{employee.emp_status}}</td>
                 <td>
                   <a href="" class="option-btn" ng-click="goToEdit(employee.id)"><i class="fa fa-pencil-square-o"></i></a>
-                  <a href="" class="option-btn" ng-click="deleteEmployee(employee.id)"><i class="fa fa-trash"></i></a>
+                  <a href="" class="option-btn" ng-click="deleteEmployee(employee.id)"  confirm="Are you sure, {{name}}?" confirm-title="Please verify, {{name}}?" confirm-ok="Yes" confirm-cancel="No"><i class="fa fa-trash"></i></a>
                 </td>
               </tr>
             </tbody>
