--- a/admin/index.html
+++ b/admin/index.html
@@ -47,13 +47,13 @@
 <!-- jQuery 2.2.0 -->
 <script src="plugins/jQuery/jQuery-2.2.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script>
+<!-- <script>
   $.widget.bridge('uibutton', $.ui.button);
-</script>
+</script> -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="plugins/datepicker/bootstrap-datepicker.js"></script>
 <script src="dist/js/app.js"></script>
-<!-- <script src="dist/js/pages/dashboard.js"></script> --> 
+<!-- <script src="dist/js/pages/dashboard.js"></script> -->
 <script src="dist/js/demo.js"></script>
 </body>
 </html>
