updated user profile page

--- a/admin/pages/header.html
+++ b/admin/pages/header.html
@@ -7,18 +7,22 @@
     <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
       <span class="sr-only">Toggle navigation</span>
     </a>
-    <div class="navbar-custom-menu">
+    <div class="navbar-custom-menu" ng-init="loadUserdetails()">
       <ul class="nav navbar-nav">
         <li class="dropdown user user-menu">
           <a href="" class="dropdown-toggle" data-toggle="dropdown">
             <img src="dist/img/logo.jpg" class="user-image" alt="User Image">
             <span class="hidden-xs">Test Admin</span>
           </a>
-          <ul class="dropdown-menu">
-            <li class="user-header">
+          <ul class="dropdown-menu" >
+            <li class="user-header"  >
               <img src="dist/img/logo.jpg" class="img-circle" alt="User Image">
               <p>
+                {{userProfile.user_name}}-{{userProfile.roll_type}}
                 Test Admin - Admin
+              </p>
+              <p>
+                {{}}
               </p>
             </li>
             <li class="user-footer">
