updated user profile page

--- a/admin/pages/header.html
+++ b/admin/pages/header.html
@@ -12,23 +12,19 @@
         <li class="dropdown user user-menu">
           <a href="" class="dropdown-toggle" data-toggle="dropdown">
             <img src="dist/img/logo.jpg" class="user-image" alt="User Image">
-            <span class="hidden-xs">Test Admin</span>
+            <span class="hidden-xs">{{logedIn_user.user_name}}</span>
           </a>
           <ul class="dropdown-menu" >
             <li class="user-header"  >
               <img src="dist/img/logo.jpg" class="img-circle" alt="User Image">
               <p>
-                {{userProfile.user_name}}-{{userProfile.roll_type}}
-                Test Admin - Admin
-              </p>
-              <p>
-                {{}}
+                {{logedIn_user.user_name}} - {{logedIn_user.roll_type}}
               </p>
             </li>
             <li class="user-footer">
-              <div class="pull-left">
+              <!-- <div class="pull-left">
                 <a href="" class="btn btn-default btn-flat">Change Password</a>
-              </div>
+              </div> -->
               <div class="pull-right">
                 <a href="" class="btn btn-default btn-flat" ng-click="signOut()">Sign out</a>
               </div>
