--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -5,8 +5,8 @@
         <img src="dist/img/logo.jpg" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>Test Admin</p>
-        <a href=""><i class="fa fa-circle text-success"></i> Online</a>
+        <p>{{logedIn_user.user_name}}</p>
+        <a href="">{{logedIn_user.roll_type}}</a>
       </div>
     </div>
     <ul class="sidebar-menu">
