--- a/admin/pages/newemployee.html
+++ b/admin/pages/newemployee.html
@@ -138,6 +138,7 @@
             <option value="">Select one</option>
             <option value="Active">Active</option>
             <option value="Suspend">Suspend</option>
+            <option value="Retired">Retired</option>
           </select>
           <span class="help-block" ng-show="addemployee.emp_status.$error.required && addemployee.emp_status.$touched">Please enter employee status</span>
         </div>
