--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -33,8 +33,8 @@
           <li><a ui-sref="employeeList"><i class="fa fa-circle-o"></i>Employee List</a></li>
         </ul>
       </li>
-      <li class="treeview">
-        <a href="">
+      <li class="treeview" >
+        <a href="" ui-sref="retiredemployeelist">
           <i class="fa fa-cubes" aria-hidden="true"></i>
           <span>Pension Scheme</span>
         </a>
