--- a/admin/pages/Retiredemployeelist.html
+++ b/admin/pages/Retiredemployeelist.html
@@ -52,7 +52,8 @@
                 <td>{{employee.dor}}</td>
                 <td>{{employee.emp_status}}</td>
                 <td>
-
+                  <button ng-click="loadEmpdocument()" type="button" class="btn btn-block btn-info btn-x" ui-sref="retiredemployeelist">Employee Documents</button>
+                </td>
               </tr>
             </tbody>
           </table>
