added document entry

--- a/admin/pages/Retiredemployeelist.html
+++ b/admin/pages/Retiredemployeelist.html
@@ -5,7 +5,7 @@
   </h1>
   <button class="btn btn-primary pull-right" ui-sref="newplan" ng-if="user_type == '3'"><i class="fa fa-plus"></i></button>
 </section>
-<section class="content" ng-init="loadEmpList()">
+<section class="content" ng-init="loadRetiredEmployee()">
   <div class="row">
     <div class="col-xs-12">
       <div class="box">
@@ -30,29 +30,31 @@
                 <th>DOB</th>
                 <th>DOJ</th>
                 <th>DOR</th>
+                <th>ULB</th>
                 <th>Status</th>
                 <th>Operation</th>
               </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="employee in emp_list">
+              <tr ng-repeat="Retiredemployee in employee_list">
                 <td>{{$index+1}}</td>
-                <td>{{employee.name}}</td>
-                <td>{{employee.designation}}</td>
-                <td>{{employee.village}}</td>
-                <td>{{employee.city}}</td>
-                <td>{{employee.post}}</td>
-                <td>{{employee.police_station}}</td>
-                <td>{{employee.district}}</td>
-                <td>{{employee.pin}}</td>
-                <td>{{employee.mobile}}</td>
-                <td>{{employee.email}}</td>
-                <td>{{employee.dob}}</td>
-                <td>{{employee.doj}}</td>
-                <td>{{employee.dor}}</td>
-                <td>{{employee.emp_status}}</td>
+                <td>{{Retiredemployee.name}}</td>
+                <td>{{Retiredemployee.designation}}</td>
+                <td>{{Retiredemployee.village}}</td>
+                <td>{{Retiredemployee.city}}</td>
+                <td>{{Retiredemployee.post}}</td>
+                <td>{{Retiredemployee.police_station}}</td>
+                <td>{{Retiredemployee.district}}</td>
+                <td>{{Retiredemployee.pin}}</td>
+                <td>{{Retiredemployee.mobile}}</td>
+                <td>{{Retiredemployee.email}}</td>
+                <td>{{Retiredemployee.dob}}</td>
+                <td>{{Retiredemployee.doj}}</td>
+                <td>{{Retiredemployee.dor}}</td>
+                <td>{{Retiredemployee.ulb}}</td>
+                <td>{{Retiredemployee.emp_status}}</td>
                 <td>
-                  <button ng-click="loadEmpdocument()" type="button" class="btn btn-block btn-info btn-x" ui-sref="retiredemployeelist">Employee Documents</button>
+                  <button ng-click="loadEmpdocument(Retiredemployee.id)" type="button" class="btn btn-block btn-info btn-x" ui-sref="employeeDocuments">Employee Documents</button>
                 </td>
               </tr>
             </tbody>
