--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -1,10 +1,10 @@
 <section class="content-header">
   <h1>
-    Add Retired Employee Documents Document
+    Add Retired Employee Documents
     <small>Control panel</small>
   </h1>
 </section>
-<section class="content">
+<section class="content" ng-init="loadEmployeeDocs()">
   <div class="">
     <div class="box box-info">
       <div class="box-header with-border">
@@ -15,69 +15,45 @@
           <div class="form-group" ng-class="{'has-error': (addEmployeeDocument.pension_type.$invalid && addEmployeeDocument.pension_type.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label">Pension Type</label>
             <div class="col-sm-8">
-              <select class="form-control" ng-model="employee.pension_type" name="pension_type" required>
+              <select class="form-control" ng-model="employeeDoc.pension_type" name="pension_type" required>
                 <option value="">Select one</option>
-                <option value="Pension">Pension</option>
-                <option value="Family Pension">Family Pension</option>
+                <option value="Pension" ng-selected="employee.pension_type">Pension</option>
+                <option value="Family Pension" ng-selected="employee.pension_type">Family Pension</option>
               </select>
-              <span class="help-block" ng-show="addemployee.emp_status.$error.required && addemployee.emp_status.$touched">Please enter employee status</span>
+              <span class="help-block" ng-show="addEmployeeDocument.pension_type.$error.required && addEmployeeDocument.pension_type.$touched">Please enter employee status</span>
             </div>
           </div>
-          <div class="form-group" ng-class="{'has-error': (addEmployeeDocument.pension_type.$invalid && addEmployeeDocument.pension_type.$touched)}">
+          <div class="form-group" ng-class="{'has-error': (addEmployeeDocument.pension_category.$invalid && addEmployeeDocument.pension_category.$touched)}">
             <label for="inputPassword3" class="col-sm-3 control-label">Category</label>
             <div class="col-sm-8">
-              <select class="form-control" ng-model="employee.pension_category" name="pension_category" required>
+              <select class="form-control" ng-model="employeeDoc.pension_category" name="pension_category" required>
                 <option value="">Select one</option>
                 <option value="LFS">LFS</option>
-                <option value="NON LFS">NON LFS</option>
+                <option value="NON LFS">Non LFS</option>
               </select>
-              <span class="help-block" ng-show="addemployee.emp_status.$error.required && addemployee.emp_status.$touched">Please enter employee status</span>
+              <span class="help-block" ng-show="addEmployeeDocument.pension_category.$error.required && addEmployeeDocument.pension_category.$touched">Please enter employee status</span>
             </div>
           </div>
-          
+          <div class="form-group" >
+            <label for="inputEmail3" class="col-sm-3 control-label">Documents</label>
+            <div class="col-sm-8">
+              <label ng-repeat="document in documentList" style="display:block;"><input type="checkbox" ng-model="document.is_selected">{{document.document_name}}</label>
+            </div>
+          </div>
           <div class="form-group">
-          <label for="inputPassword3" class="col-sm-3 control-label">DOB</label>
-          <div class="col-sm-8">
-              <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
-              <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
-              <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup ng-model="employee.dob" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
-              </p>
+            <label for="inputPassword3" class="col-sm-3 control-label">In Service Death</label>
+            <div class="col-sm-8">
+                <p class="input-group">
+                  <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="employeeDoc.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close" />
+                  <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+                  </span>
+                </p>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="inputPassword3" class="col-sm-3 control-label">DOJ</label>
-          <div class="col-sm-8">
-              <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
-              <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
-              <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup ng-model="employee.doj" is-open="popup1.opened1" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                <span class="input-group-btn">
-                  <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
-              </p>
-          </div>
-        </div>
-      <div class="form-group" ng-class="{'has-error': (addemployee.emp_status.$invalid && addemployee.emp_status.$touched)}">
-        <label for="inputPassword3" class="col-sm-3 control-label">Employee Status</label>
-        <div class="col-sm-8">
-          <select class="form-control" ng-model="employee.emp_status" name="emp_status" required>
-            <option value="">Select one</option>
-            <option value="Active">Active</option>
-            <option value="Suspend">Suspend</option>
-            <option value="Retired">Retired</option>
-          </select>
-          <span class="help-block" ng-show="addemployee.emp_status.$error.required && addemployee.emp_status.$touched">Please enter employee status</span>
-        </div>
-      </div>
-        </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
-          <button type="submit" class="btn btn-default" ui-sref="dashboard">Cancel</button>
-          <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitdetails()">Submit</button>
+         <div class="box-footer">
+          <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Cancel</button>
+          <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitDocuments()">Send to ULB</button>
           <section  align="center m-t-sm">
               <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
           </section>
