--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -40,20 +40,51 @@
               <label ng-repeat="document in documentList" style="display:block;"><input type="checkbox" ng-model="document.is_selected">{{document.document_name}}</label>
             </div>
           </div>
+          <div class="form-group" ng-class="{'has-error': (addEmployeeDocument.emp_refno.$invalid && addEmployeeDocument.emp_refno.$touched)}">
+             <label for="inputEmail3" class="col-sm-3 control-label">Reference No</label>
+             <div class="col-sm-8">
+               <input type="text" class="form-control" name="emp_refno" ng-model="employeeDoc.ref_no" placeholder="employee refno"  ng-pattern="/^[0-9]+$/" required>
+               <span class="help-block" ng-show="addEmployeeDocument.emp_refno.$error.required && addEmployeeDocument.emp_refno.$touched">Please enter employee ref no</span>
+               <span class="help-block" ng-show="addEmployeeDocument.emp_refno.$error.pattern && addEmployeeDocument.emp_refno.$touched">refno should be numeric</span>
+             </div>
+           </div>
+           <div class="form-group">
+           <label for="inputPassword3" class="col-sm-3 control-label">Date</label>
+           <div class="col-sm-8">
+               <!-- <input type="text" class="form-control pull-right" id="datepicker" ng-model="buildingPlan.date"> -->
+               <!-- <div date-picker="dates.today" id="pickerMinDateDiv" min-date="minDate" view="date" min-view="hours" timezone="UTC" watch-direct-changes="true"></div> -->
+               <p class="input-group">
+                 <input type="text" class="form-control" uib-datepicker-popup ng-model="employeeDoc.ref_date" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                 <span class="input-group-btn">
+                   <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
+                 </span>
+               </p>
+           </div>
+         </div>
+           <div class="box-body">
+           <div class="form-group">
+            <label for="inputEmail3" class="col-sm-3 control-label">Remarks</label>
+            <div class="col-sm-8" ng-class="{'has-error': (addEmployeeDocument.emp_remarks.$invalid && addEmployeeDocument.emp_remarks.$touched)}">
+              <textarea name="emp_remarks" class="form-control" rows="4" placeholder="Remarks" ng-model="employeeDoc.remarks" required></textarea>
+              <span class="help-block" ng-show="addEmployeeDocument.emp_remarks.$error.required && addEmployeeDocument.emp_remarks.$touched">Please enter your  remarks</span>
+            </div>
+          </div>
+        </div>
           <div class="form-group">
             <label for="inputPassword3" class="col-sm-3 control-label">In Service Death</label>
             <div class="col-sm-8">
                 <p class="input-group">
-                  <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="employeeDoc.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close" />
+                  <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="employeeDoc.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close"/>
                   <span class="input-group-btn">
                     <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
                   </span>
                 </p>
             </div>
           </div>
+
          <div class="box-footer">
           <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Cancel</button>
-          <button ng-disabled="addemployee.$invalid" type="submit" class="btn btn-info pull-right" ng-click="submitDocuments()">Send to ULB</button>
+          <button ng-disabled="addEmployeeDocument.$invalid" type="submit" class="btn btn-info pull-right" ng-click="updateEmployeeDoc(employeeDoc.id)">Send to ULB</button>
           <section  align="center m-t-sm">
               <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
           </section>
