--- a/admin/index.html
+++ b/admin/index.html
@@ -22,6 +22,7 @@
   <script src="dist/js/angular/ng-animate.js"></script>
   <script src="dist/js/angular/ui-bootstrap-tpls-0.14.3.min.js"></script>
   <script src="dist/js/angular/ngStorage.min.js"></script>
+  <script src="dist/js/angular/angular-cookies.min.js"></script>
   <script src="dist/js/date-picker/angular-datepicker.min.js"></script>
   <script src="dist/js/date-picker/moment.js"></script>
   <script src="main_app.js"></script>
