--- a/admin/pages/dashboard.html
+++ b/admin/pages/dashboard.html
@@ -1,6 +1,6 @@
 <section class="content-header" >
   <h1>
-    Dashboard {{loggedin}}
+    Dashboard
     <small>Control panel</small>
   </h1>
 </section>
