--- a/admin/pages/forgotPassword.html
+++ b/admin/pages/forgotPassword.html
@@ -2,12 +2,12 @@
   <div class="login-logo">
     <img src="dist/img/orissa-emunicipality.png" class="user-image" alt="User Image" style="width:100%">
   </div>
-  <div class="">
-      <div class="login-box-body">
+  <form class="">
+      <div class="login-box-body" ng-if="!is_token">
         <p class="login-box-msg">Enter your mail id for get OTP</p>
         <form name="forgot">
           <div class="form-group has-feedback">
-            <input type="email" name="email" class="form-control" placeholder="Email" ng-model="password.email" required>
+            <input type="email" name="email" class="form-control" placeholder="Email" ng-model="password.user_email" required>
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
           </div>
           <div class="row">
@@ -15,10 +15,40 @@
               <button ng-click="applyOTP()" class="btn btn-primary btn-block btn-flat">
                 Submit
               </button>
+              <section  align="center" class="m-t-sm">
+                  <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
+              </section>
             </div>
           </div>
         </form>
         <a ui-sref="login">login</a><br>
       </div>
-  </div>
+      <div class="login-box-body" ng-if="is_token">
+        <p class="login-box-msg">Reset Password</p>
+        <form name="forgot">
+          <div class="form-group has-feedback">
+            <input type="password" name="pwd" class="form-control" placeholder="New password" ng-model="password.password" required>
+            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+          </div>
+          <div class="form-group has-feedback">
+            <input type="password" name="cpwd" class="form-control" placeholder="Confirm password" ng-model="password.cpass" required>
+            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+          </div>
+          <div class="form-group has-feedback">
+            <input type="password" name="otp" class="form-control" placeholder="Enter OTP" ng-model="password.otp" required>
+            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <button ng-click="changePassword()" class="btn btn-primary btn-block btn-flat">
+                Submit
+              </button>
+              <section  align="center" class="m-t-sm">
+                  <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
+              </section>
+            </div>
+          </div>
+        </form>
+      </div>
+  </form>
 </div>
