updated dashboard page

--- a/admin/pages/dashboard.html
+++ b/admin/pages/dashboard.html
@@ -15,7 +15,7 @@
         <div class="icon">
           <i class="ion ion-bag"></i>
         </div>
-        <a href=""class="small-box-footer" >View Status<i class="fa fa-arrow-circle-right"></i></a>
+        <a ui-sref="employeeList-bystatus({status: 'Retired'})" class="small-box-footer" >View Status<i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <div class="col-lg-4 col-xs-6">
@@ -27,7 +27,7 @@
         <div class="icon">
           <i class="ion ion-stats-bars"></i>
         </div>
-        <a href=""class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
+        <a class="small-box-footer" ui-sref="employeeList-bystatus({status: 'tobeRetired'})">View Status <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
     <div class="col-lg-4 col-xs-6">
@@ -39,7 +39,7 @@
         <div class="icon">
           <i class="ion ion-person-add"></i>
         </div>
-        <a href="" class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
+        <a  ui-sref="employeeList-bystatus({status: 'All'})" class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div>
   </div>
