--- a/admin/pages/forgotPassword.html
+++ b/admin/pages/forgotPassword.html
@@ -40,7 +40,7 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <button ng-click="changePassword()" class="btn btn-primary btn-block btn-flat">
+              <button ng-click="forgotPassword()" class="btn btn-primary btn-block btn-flat">
                 Submit
               </button>
               <section  align="center" class="m-t-sm">
