--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -17,8 +17,8 @@
             <div class="col-sm-8">
               <select class="form-control" ng-model="employeeDoc.pension_type" name="pension_type" required>
                 <option value="">Select one</option>
-                <option value="Pension" ng-selected="employee.pension_type">Pension</option>
-                <option value="Family Pension" ng-selected="employee.pension_type">Family Pension</option>
+                <option value="Pension">Pension</option>
+                <option value="Family Pension">Family Pension</option>
               </select>
               <span class="help-block" ng-show="addEmployeeDocument.pension_type.$error.required && addEmployeeDocument.pension_type.$touched">Please enter employee status</span>
             </div>
@@ -34,6 +34,29 @@
               <span class="help-block" ng-show="addEmployeeDocument.pension_category.$error.required && addEmployeeDocument.pension_category.$touched">Please enter employee status</span>
             </div>
           </div>
+          <div class="form-group" ng-if="employeeDoc.pension_type == 'Family Pension'">
+            <label for="inputEmail3" class="col-sm-3 control-label">Nominee</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" name="emp_nominee" ng-model="employeeDoc.nominee" placeholder="Nominee">
+            </div>
+          </div>
+          <div class="form-group" ng-if="employeeDoc.pension_type == 'Family Pension'">
+            <label for="inputEmail3" class="col-sm-3 control-label">Relation</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" name="emp_relation" ng-model="employeeDoc.relation" placeholder="Relation with employee">
+            </div>
+          </div>
+          <div class="form-group" ng-if="employeeDoc.pension_type == 'Family Pension'">
+            <label for="inputPassword3" class="col-sm-3 control-label">Date of Death/ In Service Death</label>
+            <div class="col-sm-8">
+                <p class="input-group">
+                  <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="employeeDoc.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close"/>
+                  <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+                  </span>
+                </p>
+            </div>
+          </div>
           <div class="form-group" >
             <label for="inputEmail3" class="col-sm-3 control-label">Documents</label>
             <div class="col-sm-8">
@@ -43,7 +66,7 @@
           <div class="form-group" ng-class="{'has-error': (addEmployeeDocument.emp_refno.$invalid && addEmployeeDocument.emp_refno.$touched)}">
              <label for="inputEmail3" class="col-sm-3 control-label">Reference No</label>
              <div class="col-sm-8">
-               <input type="text" class="form-control" name="emp_refno" ng-model="employeeDoc.ref_no" placeholder="employee refno"  ng-pattern="/^[0-9]+$/" required>
+               <input type="text" class="form-control" name="emp_refno" ng-model="employeeDoc.ref_no" placeholder="Reference No"  ng-pattern="/^[0-9]+$/" required>
                <span class="help-block" ng-show="addEmployeeDocument.emp_refno.$error.required && addEmployeeDocument.emp_refno.$touched">Please enter employee ref no</span>
                <span class="help-block" ng-show="addEmployeeDocument.emp_refno.$error.pattern && addEmployeeDocument.emp_refno.$touched">refno should be numeric</span>
              </div>
@@ -70,18 +93,6 @@
             </div>
           </div>
         </div>
-          <div class="form-group">
-            <label for="inputPassword3" class="col-sm-3 control-label">In Service Death</label>
-            <div class="col-sm-8">
-                <p class="input-group">
-                  <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="employeeDoc.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close"/>
-                  <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </span>
-                </p>
-            </div>
-          </div>
-
          <div class="box-footer">
           <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Cancel</button>
           <button ng-disabled="addEmployeeDocument.$invalid" type="submit" class="btn btn-info pull-right" ng-click="updateEmployeeDoc(employeeDoc.id)">Send to ULB</button>
